# IceFlix

./: .gitattributes  .gitignore  .pylintrc  CODEOWNERS  README.md  media.db  run_admin  run_client  run_iceflix  run_newclient  setup.cfg
IceFlix/: Authenticator.py  Iceflix_ice.py  Main.py  MediaCatalog.py  MediaUploader.py  StreamController.py  StreamProvider.py  __init__.py  admin.py  catalog_updates.py  cli.py  client.py  constants.py  contorlar_bbdd.py  iceevents.py  iceflix.ice  iceflix_monitoring  iceflix_streamcontroller_monitoring  iceflixrtsp.py  main_service.config  mange_bbdd.py  media.db  media.py  monitoring.config  new_client.py  register_services.py  rtsp.py  service_announcement.py  services_cfg.config  stream_announcements.py  stream_sync.py  test_catalog.py  test_client.py  test_provider.py  user_revocations.py  user_updates.py  users.json  users_db.py  volatile_services.py
IceFlix/local/: video.txt
IceFlix/monitores/: monitor_anunciamientos.py  monitor_usuarios.py
IceFlix/persistence/: 0d41c4c2-572c-48a3-bd12-278f9a6b519e_users.json  4c2917e3-c4c7-42a8-b57f-c6da6e8216ab_users.json  5aee6b62-a4e5-4871-880b-3889e8cb38b8_users.json  b129c3c3-8c49-438a-b178-3e854b1a994c_users.json  (+3 more)
IceStorm/: data.mdb  lock.mdb
configs/: authenticator.config  catalog.config  general.config  icegrid.config  icestorm.config  main.config  provider.config
packagename/: Authenticator.py  Iceflix.ice  Main.py  MediaCatalog.py  MediaUploader.py  StreamController.py  StreamProvider.py  client.py  mainApp.py  main_service.config  server.py  services_cfg.config  users.json
(+3 files in other folders)
