[metadata]
name = IceFlix_by_Team_ADS
version = 1.0.0
description =IceFlix project developed by group ADS

[options]
packages = find:
install_requires =
    zeroc-ice>=3.6.5

[options.package_data]
* = *.ice

[options.entry_points]
console_scripts =
    iceflix_service = packagename.cli:main_service