[metadata]
name = IceFlix_team_ADS
version = 1.0.0
description = IceFlix project developed by group ADS

[options]
packages = find:
install_requires =
    zeroc-ice>=3.6.5

[options.package_data]
* = *.ice

[options.entry_points]
console_scripts =
    iceflix_client = IceFlix.client:main
    iceflix_service = IceFlix.Main:main
    iceflix_authenticator = IceFlix.Authenticator:main
    iceflix_catalog = IceFlix.Catalog:main
    iceflix_strprovider = IceFlix.StreamProvider:main